--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^4.0.0",
     "express": "^4.16.2",
     "method-override": "^2.3.10",
+    "nunjucks": "^3.1.2",
     "pg": "^7.4.1",
     "sequelize": "^4.33.4"
   }
